Added qt5 layer requirement

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,13 +1,14 @@
-# We have a conf and classes directory, add to BBPATH
+# We have a conf and classes directory, add to BBPATH                                                                      
 BBPATH .= ":${LAYERDIR}"
 
-# We have recipes-* directories, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+# We have recipes-* directories, add to BBFILES                                                                            
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \                                                                                 
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "meta-occurity"
 BBFILE_PATTERN_meta-occurity = "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-occurity = "6"
+BBFILE_PRIORITY_meta-occurity = "8"
 
-LAYERDEPENDS_meta-occurity = "core"
+LAYERVERSION_meta-occurity = "1"
+LAYERDEPENDS_meta-occurity = "core qt5-layer"
 LAYERSERIES_COMPAT_meta-occurity = "nanbield"
