Added 'scarthgap' compatibility

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_PRIORITY_meta-occurity = "8"
 
 LAYERVERSION_meta-occurity = "1"
 LAYERDEPENDS_meta-occurity = "core qt5-layer"
-LAYERSERIES_COMPAT_meta-occurity = "nanbield"
+LAYERSERIES_COMPAT_meta-occurity = "nanbield scarthgap"
