Updating for qt6

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,5 +10,5 @@ BBFILE_PATTERN_meta-occurity = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-occurity = "8"
 
 LAYERVERSION_meta-occurity = "1"
-LAYERDEPENDS_meta-occurity = "core qt5-layer"
-LAYERSERIES_COMPAT_meta-occurity = "nanbield scarthgap"
+LAYERDEPENDS_meta-occurity = "core qt6-layer"
+LAYERSERIES_COMPAT_meta-occurity = "scarthgap"
